--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -1213,7 +1213,7 @@
                             <div class="ms-auto d-flex align-items-center me-2">
                                 ${createDropdown(`type_plex_${lib.title}`, lib.plex_type, lib.type)}
                             </div>
-                            <input class="form-check-input" type="checkbox" name="hide_${lib.title}" title="Hide this library" ${lib.is_hidden ? 'checked' : ''}>
+                            <input class="form-check-input" type="checkbox" name="hide_plex_${lib.title}" title="Hide this library" ${lib.is_hidden ? 'checked' : ''}>
                         </div>
                     `).join('');
                 } else {
@@ -1257,7 +1257,7 @@
                             <div class="ms-auto d-flex align-items-center me-2">
                                 ${createDropdown(`type_internal_${item.name}`, item.type)}
                             </div>
-                            <input class="form-check-input" type="checkbox" name="hide_${item.name}" title="Hide this folder" ${item.is_hidden ? 'checked' : ''}>
+                            <input class="form-check-input" type="checkbox" name="hide_internal_${item.name}" title="Hide this folder" ${item.is_hidden ? 'checked' : ''}>
                         </div>
                     `).join('');
                 } else {
